<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_statistical"
            android:icon="@drawable/ic_chart"
            android:title="@string/menu_statistical" />
        <item
            android:id="@+id/nav_type"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_tyle" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_collections_bookmark_black_24dp"
            android:title="@string/menu_book" />
        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/ic_bill"
            android:title="@string/menu_bill" />
        <item
            android:id="@+id/nav_rss"
            android:icon="@drawable/ic_bill"
            android:title="RSS" />

    <item android:title="Information">
        <menu>

            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>
    </group>
</menu>
