<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.statistical.StatisticalFragment">
    <LinearLayout
        android:weightSum="10"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.tabs.TabLayout
            android:layout_weight="1"
            android:background="@drawable/custom_tablayout"
            android:id="@+id/tabLayout_sta"
            app:tabTextColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.tabs.TabItem
                android:text="@string/yesterday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.google.android.material.tabs.TabItem
                android:text="@string/day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.google.android.material.tabs.TabItem
                android:text="@string/month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.google.android.material.tabs.TabItem
                android:text="@string/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:layout_weight="9"
            android:id="@+id/viewPager_sta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

</FrameLayout>