<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:background="@null"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:text="@string/addUser"
            style="@style/AppTheme.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageUserAdd"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_user"
            app:civ_border_color="@color/colorBackgroup"
            app:civ_border_width="2dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailAddnew"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="@string/email"
            android:background="@drawable/custom_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassAddnew"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="@string/pass"
            android:background="@drawable/custom_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhoneAddnew"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="Phone"
            android:background="@drawable/custom_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameAddnew"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="Name"
            android:background="@drawable/custom_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDateAddnew"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="Date"
            android:enabled="false"
            android:background="@drawable/custom_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnAddUserNewDialog"
                style="@style/AppTheme.CustomButtonDialog"
                android:text="Add"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                style="@style/AppTheme.CustomButtonDialog"
                android:text="@string/dialog_cancel"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>