<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_backgroup"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.manageruser.InfoFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="15dp"
        >

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:elevation="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgUserInfo"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:layout_width="96dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorBackgroup"
                    android:src="@drawable/ic_user"
                    android:layout_height="96dp" />
                <TextView
                    android:id="@+id/txtNameUser"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="ABC"
                    style="@style/AppTheme.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_marginTop="5dp"
                    android:background="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"></View>
                <TextView
                    android:id="@+id/txtEmailUser"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="abc@gmail.com"
                    style="@style/AppTheme.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            android:elevation="20dp"
            app:cardElevation="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtManagerUser"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/manager"
                    style="@style/AppTheme.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_marginTop="5dp"
                    android:background="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"></View>
                <TextView
                    android:id="@+id/txtChangePass"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/changepass"
                    style="@style/AppTheme.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_marginTop="5dp"
                    android:background="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"></View>
                <TextView
                    android:id="@+id/txtExit"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/menu_exit"
                    style="@style/AppTheme.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>
