<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_backgroup"
    tools:context=".view.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/imglogobook"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/book" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imglogobook"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/txtLoginAccount"
                        style="@style/AppTheme.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/login_account" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutInputUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtLoginAccount">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Email" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutInputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layoutInputUserName">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Password" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/txtForgotpassword"
                        style="@style/AppTheme.TextView"
                        android:text="@string/forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/layoutInputPassword"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtForgotpassword"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_button"
                        android:fontFamily="@font/custom_font"
                        android:text="@string/login_account"
                        android:textColor="@color/colorWhite" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/btnLoginGoogle"
                style="@style/AppTheme.ButtonCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardviewLogin"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/login_account"
                android:textAlignment="center" />

            <Button
            android:id="@+id/btnLoginFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLoginGoogle"
            android:layout_marginTop="10dp"
            style="@style/AppTheme.ButtonCustom"
            android:drawableLeft="@drawable/ic_fb"
            android:text="@string/login_account"
            android:textAlignment="center" />
            <Button
                android:id="@+id/btnLoginAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLoginFacebook"
                android:layout_marginTop="10dp"
                style="@style/AppTheme.ButtonCustom"
                android:drawableLeft="@drawable/ic_phone"
                android:text="@string/login_admin"
                android:textAlignment="center" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>


